// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<svg
  aria-label="Laster..."
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
`;

exports[`Sizes 1`] = `
<svg
  aria-label="Laster..."
  data-size="2xs"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Laster..."
  data-size="xs"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Laster..."
  data-size="sm"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Laster..."
  data-size="md"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Laster..."
  data-size="lg"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Laster..."
  data-size="xl"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
`;

exports[`Variants 1`] = `
<svg
  aria-label="Laster..."
  data-color="neutral"
  data-size="xl"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Laster..."
  data-color="accent"
  data-size="xl"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Laster..."
  data-color="support1"
  data-size="xl"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Laster..."
  data-color="support2"
  data-size="xl"
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="20"
    stroke-width="5"
  >
  </circle>
</svg>
`;
